--- a/index.html
+++ b/index.html
@@ -249,6 +249,97 @@ const data = {
       { maSV: "TH23TH3341", tenSV: "Thị Anh" }
     ]
   }
+  },
+  "KINH TẾ - LUẬT": {
+    "CĐ9+K4": {
+        "Kế Toán":  [
+  { maSV: "CK23KL3105", tenSV: "Nguyễn Trường Giang" },
+  { maSV: "KT23KT3101", tenSV: "Trần Thuý An" },
+  { maSV: "KT23KT3102", tenSV: "Huỳnh Anh" },
+  { maSV: "KT23KT3103", tenSV: "Lý Băng Băng" },
+  { maSV: "KT23KT3104", tenSV: "Viên Thị Băng Băng" },
+  { maSV: "KT23KT3105", tenSV: "Lê Trường Gia Bảo" },
+  { maSV: "KT23KT3106", tenSV: "Lương Nguyễn Thuý Hằng" },
+  { maSV: "KT23KT3107", tenSV: "Lê Nguyễn Gia Hiên" },
+  { maSV: "KT23KT3108", tenSV: "Trương Thị Trúc Huỳnh" },
+  { maSV: "KT23KT3109", tenSV: "Hồ Minh Khôi" },
+  { maSV: "KT23KT3111", tenSV: "Từ Thị Mỹ Lan" },
+  { maSV: "KT23KT3112", tenSV: "Trịnh Thị Trúc Linh" },
+  { maSV: "KT23KT3113", tenSV: "Sử Mỹ Loan" },
+  { maSV: "KT23KT3115", tenSV: "Lý Diễm My" },
+  { maSV: "KT23KT3117", tenSV: "Nguyễn Võ Bảo Ngân" },
+  { maSV: "KT23KT3118", tenSV: "Nguyễn Thị Bé Nho" },
+  { maSV: "KT23KT3119", tenSV: "Trương Huỳnh Như" },
+  { maSV: "KT23KT3120", tenSV: "Lâm Tuấn Nhựt" },
+  { maSV: "KT23KT3121", tenSV: "Huỳnh Thị Thu Sương" },
+  { maSV: "KT23KT3122", tenSV: "Nguyễn Thị Hồng Thắm" },
+  { maSV: "KT23KT3123", tenSV: "Nguyễn Thị Thiên Thanh" },
+  { maSV: "KT23KT3124", tenSV: "Huỳnh Như Thảo" },
+  { maSV: "KT23KT3129", tenSV: "Lê Thị Gia Tuệ" },
+  { maSV: "KT23KT3132", tenSV: "Nghiêm Thị Băng Tiền" },
+  { maSV: "KT23KT3133", tenSV: "Huỳnh Thị Huỳnh Như" },
+  { maSV: "KT23KT3134", tenSV: "Trương Kim Phụng Khánh" },
+  { maSV: "KT23NH3105", tenSV: "Võ Thị Thúy Ngân" }
+],
+"Chăn nuôi - Thú y": [
+      { maSV: "NN23BV3117", tenSV: "Danh Thị Thanh Tú" },
+      { maSV: "NN23TS3101", tenSV: "Mã Đạt Nguyên" },
+      { maSV: "NN23TY3102", tenSV: "Nguyễn Minh Anh" },
+      { maSV: "NN23TY3103", tenSV: "Châu Ngọc Trúc Đào" },
+      { maSV: "NN23TY3105", tenSV: "Võ Hoàng Diệu" },
+      { maSV: "NN23TY3106", tenSV: "Quách Thiên Dinh" },
+      { maSV: "NN23TY3107", tenSV: "Từ Nguyễn Phương Dung" },
+      { maSV: "NN23TY3109", tenSV: "Nguyễn Thị Thanh Hiền" },
+      { maSV: "NN23TY3111", tenSV: "Trần Gia Linh" },
+      { maSV: "NN23TY3112", tenSV: "Đặng Ánh Mi" },
+      { maSV: "NN23TY3113", tenSV: "Trần Thị Thúy Ngân" },
+      { maSV: "NN23TY3114", tenSV: "Nguyễn Thị Mộng Ngọc" },
+      { maSV: "NN23TY3119", tenSV: "Tăng Đình Quý" },
+      { maSV: "NN23TY3120", tenSV: "Huỳnh Thị Hồng Thắm" },
+      { maSV: "NN23TY3121", tenSV: "Đinh Thị Thiên Thanh" },
+      { maSV: "NN23TY3122", tenSV: "Bùi Huỳnh Thanh Thảo" },
+      { maSV: "NN23TY3124", tenSV: "Lê Thị Anh Thư" },
+      { maSV: "NN23TY3125", tenSV: "Lưu Trần Thảo Trang" },
+      { maSV: "NN23TY3128", tenSV: "Phạm Thị Thuý Vân" },
+      { maSV: "NN23TY3130", tenSV: "Lê Ngọc Như Ý" },
+      { maSV: "NN23TY3137", tenSV: "Hà Lê Quốc Anh" },
+      { maSV: "NN23TY3138", tenSV: "Bùi Thanh Du" },
+      { maSV: "TH23TH3220", tenSV: "Mai Ngô Huyền Nhi" },
+      { maSV: "TH23TH3230", tenSV: "Nguyễn Thanh Thảo" }
+    ]
+    },
+      "CĐ9+K5": {
+    "Quản trị kinh doanh": [
+      { maSV: "DL24KS3320", tenSV: "Nguyễn Huỳnh Mai Nguyên" },
+      { maSV: "KT24QT3101", tenSV: "Danh Thị Thuý An" },
+      { maSV: "KT24QT3102", tenSV: "Đặng Huế Anh" },
+      { maSV: "KT24QT3103", tenSV: "Phạm Quốc Anh" },
+      { maSV: "KT24QT3105", tenSV: "Nguyễn Ngọc Chăm" },
+      { maSV: "KT24QT3106", tenSV: "Hình Tuyết Duy" },
+      { maSV: "KT24QT3107", tenSV: "Tạ Huỳnh Bảo Hân" },
+      { maSV: "KT24QT3110", tenSV: "Nguyễn Hữu Khang" },
+      { maSV: "KT24QT3111", tenSV: "Nguyễn Chí Khang" },
+      { maSV: "KT24QT3112", tenSV: "Trần Kim Ly" },
+      { maSV: "KT24QT3115", tenSV: "Đoàn Trọng Nghĩa" },
+      { maSV: "KT24QT3116", tenSV: "Vương Tố Ngọc" },
+      { maSV: "KT24QT3117", tenSV: "Nguyễn Huỳnh Mỹ Ngọc" },
+      { maSV: "KT24QT3118", tenSV: "Trần Huỳnh Như" },
+      { maSV: "KT24QT3119", tenSV: "Nguyễn Ngọc Tâm Như" },
+      { maSV: "KT24QT3120", tenSV: "Lâm Huỳnh Như" },
+      { maSV: "KT24QT3123", tenSV: "Lê Tú Sương" },
+      { maSV: "KT24QT3126", tenSV: "Bùi Hà Anh Thư" },
+      { maSV: "KT24QT3128", tenSV: "Nguyễn Thị Thanh Thuý" },
+      { maSV: "KT24QT3129", tenSV: "Nguyễn Thị Lệ Thuỷ" },
+      { maSV: "KT24QT3130", tenSV: "Trần Phương Thúy" },
+      { maSV: "KT24QT3132", tenSV: "Chao Thị Huyền Trân" },
+      { maSV: "KT24QT3135", tenSV: "Tiêu Như Vàng" },
+      { maSV: "KT24QT3136", tenSV: "Bùi Nguyễn Thúy Vy" },
+      { maSV: "KT24QT3137", tenSV: "Danh Lâm Yến Vy" },
+      { maSV: "KT24QT3138", tenSV: "Nguyễn Thị Kim Xuyến" },
+      { maSV: "KT24QT3139", tenSV: "Huỳnh Thị Như Ý" },
+      { maSV: "KT24QT3140", tenSV: "Hồ Thiên Hạo" }
+    ]
+  }
   }
 };
 
@@ -363,11 +454,40 @@ function showViPham() {
 
   content.innerHTML = `
     <div class="bg-white p-6 rounded shadow col-span-3">
-     <p><b>Sinh viên:</b> ${selected.sv.tenSV} (${selected.sv.maSV})</p>
+      <p><b>Sinh viên:</b> ${selected.sv.tenSV} (${selected.sv.maSV})</p>
+
       <div class="mt-4">
-        <label><input type="checkbox" value="Đi trễ"> Đi trễ</label><br>
-        <label><input type="checkbox" value="Hút thuốc"> Hút thuốc</label><br>
-        <label><input type="checkbox" value="Mang dép"> Mang dép</label>
+        <label>
+          <input type="checkbox" class="vipham" value="Đi trễ"> Đi trễ
+        </label><br>
+
+        <label>
+          <input type="checkbox" class="vipham" value="Hút thuốc"> Hút thuốc
+        </label><br>
+
+        <label>
+          <input type="checkbox" class="vipham" value="Mang dép"> Mang dép
+        </label><br>
+
+         <label>
+          <input type="checkbox" class="vipham" value="Sai đồng phục"> Sai đồng phục
+        </label><br>
+
+           <label>
+          <input type="checkbox" class="vipham" value="Không thẻ sinh viên"> Không thẻ sinh viên
+        </label><br>
+
+        <label>
+          <input type="checkbox" id="viphamKhac" onchange="toggleOtherViolation()"> Khác
+        </label>
+
+        <input
+          type="text"
+          id="otherViolation"
+          placeholder="Nhập lỗi vi phạm khác..."
+          class="border p-2 mt-2 w-full"
+          style="display:none;"
+        >
       </div>
 
       <div class="mt-4">
@@ -385,36 +505,68 @@ function showViPham() {
   `;
 }
 
-// ================= ADD VIOLATION =================
-function addViolation() {
-  const checks = document.querySelectorAll("input[type=checkbox]:checked");
-  if (checks.length === 0) {
-    alert("Chưa chọn lỗi vi phạm!");
-    return;
-  }
+function toggleOtherViolation() {
+  const checkbox = document.getElementById("viphamKhac");
+  const input = document.getElementById("otherViolation");
 
-  const violations = [...checks].map(c => c.value).join(", ");
-
-violationList.push({
-  "Mã SV": selected.sv.maSV,
-  "Họ tên": selected.sv.tenSV,
-  "Lớp": selected.lop,
-  "Khóa": selected.khoaHoc,
-  "Khoa": selected.khoa,
-  "Ngày": document.getElementById("date").value,
-  "Buổi": document.getElementById("buoi").value,
-  "Vi phạm": violations
-});
-  saveData();
-  renderViolationTable(); // ⭐ HIỂN THỊ NGAY
-  alert("Đã thêm vào danh sách vi phạm");
-  function goBack() {
-  if (history.length > 0) {
-    history.pop()();
-    updateStatus();
+  if (checkbox.checked) {
+    input.style.display = "block";
+    input.focus();
+  } else {
+    input.style.display = "none";
+    input.value = "";
   }
 }
 
+// ================= ADD VIOLATION =================
+function addViolation() {
+  const date = document.getElementById("date").value;
+  const buoi = document.getElementById("buoi").value;
+
+  if (!date) {
+    alert("Vui lòng chọn ngày!");
+    return;
+  }
+
+  let violations = [];
+
+  // 1. Lỗi có sẵn
+  document.querySelectorAll(".vipham:checked").forEach(cb => {
+    violations.push(cb.value);
+  });
+
+  // 2. Lỗi khác
+  const otherCheckbox = document.getElementById("viphamKhac");
+  const otherInput = document.getElementById("otherViolation");
+
+  if (otherCheckbox.checked) {
+    if (otherInput.value.trim() === "") {
+      alert("Vui lòng nhập lỗi vi phạm khác!");
+      return;
+    }
+    violations.push(otherInput.value.trim());
+  }
+
+  if (violations.length === 0) {
+    alert("Chưa chọn lỗi vi phạm!");
+    return;
+  }
+  // 3. Thêm vào danh sách
+  violationList.push({
+    "Mã SV": selected.sv.maSV,
+    "Họ tên": selected.sv.tenSV,
+    "Lớp": selected.lop,
+    "Khóa": selected.khoaHoc,
+    "Khoa": selected.khoa,
+    "Ngày": date,
+    "Buổi": buoi.toUpperCase().replace("Á", "A").replace("Ề", "E"), // SANG / CHIEU
+    "Vi phạm": violations.join(", ")
+  });
+
+  saveData();
+  renderViolationTable();
+
+  alert("Đã thêm vào danh sách vi phạm");
 }
 
 
@@ -425,11 +577,27 @@ function exportExcel() {
     return;
   }
 
+  const first = violationList[0];
+
+  // 👉 Sửa ở đây
+  let buoi = first["Buổi"];
+  if (buoi === "Sáng") buoi = "SANG";
+  if (buoi === "Chiều") buoi = "CHIEU";
+
+  // Đổi định dạng ngày yyyy-mm-dd → dd.mm.yyyy
+  const dateParts = first["Ngày"].split("-");
+  const formattedDate = `${dateParts[2]}.${dateParts[1]}.${dateParts[0]}`;
+
+  const fileName = `${buoi}_${formattedDate}.xlsx`;
+
   const ws = XLSX.utils.json_to_sheet(violationList);
   const wb = XLSX.utils.book_new();
   XLSX.utils.book_append_sheet(wb, ws, "Danh sách vi phạm");
-  XLSX.writeFile(wb, "Danhsach_vipham.xlsx");
+
+  XLSX.writeFile(wb, fileName);
 }
+
+
 
 function goBack() {
   if (history.length > 0) {
